Fixed borders not showing up for disabled drop downs

--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -43,7 +43,6 @@
 }
 
 .items.disabled {
-    border: none;
     font-weight: 800;
 }
 
